--- a/hortalize/src/app/core/components/toolbar/toolbar.component.css
+++ b/hortalize/src/app/core/components/toolbar/toolbar.component.css
@@ -7,9 +7,14 @@ span {
 }
 
 h2 {
-  margin:auto 20px;
+  margin: auto 20px;
 }
 
 button {
-  margin:auto 5px;
+  margin: auto 5px;
+}
+
+.btn-trocar {
+  color: #ffffff;
+  background-color: #578067 !important;
 }
