--- a/hortalize/src/app/core/components/toolbar/toolbar.component.html
+++ b/hortalize/src/app/core/components/toolbar/toolbar.component.html
@@ -7,5 +7,5 @@
   <h2 tabindex="0" routerLink="#">Fale conosco</h2>
   <span class="spacer"></span>
   <button mat-stroked-button>Sair</button>
-  <button mat-flat-button color="#578067">Trocar conta</button>
+  <button mat-flat-button class="btn-trocar">Trocar conta</button>
 </mat-toolbar>
