--- a/hortalize/src/app/pages/inicial/inicial.component.css
+++ b/hortalize/src/app/pages/inicial/inicial.component.css
@@ -2,7 +2,7 @@
   width: auto;
   padding: 16px;
   background-color: #e5e5e5;
-  background-image: url("../../../assets/logoSoVamuBack.svg");
+  background-image: url("../../../assets/imagem_grande_home.png");
   background-repeat: no-repeat;
   background-position: bottom right;
   background-size: 20%;
@@ -42,4 +42,6 @@ button {
   border-radius: 4px;
   width: 228px;
   align-self: center;
+  color: #ffffff;
+  background-color: #578067 !important;
 }
