--- a/hortalize/src/app/pages/inicial/inicial.component.html
+++ b/hortalize/src/app/pages/inicial/inicial.component.html
@@ -1,14 +1,12 @@
 <div class="body">
-  <h2 tabindex="0">Tela inicial</h2>
   <div class="container">
-    <h3 tabindex="0">Conquiste o sonho da casa própria</h3>
+    <h3 tabindex="0">Nós amamos ajudar você a salvar o planeta</h3>
     <mat-divider></mat-divider>
     <div tabindex="0" class="conteudo">
-      Em apenas alguns passos fique mais perto de
-      <br>segurar as chaves <i aria-label="rostinho sorrindo">:) </i>
+      Entenda como cuidar da sua horta e quais <br> espécies são melhores para cada estação<i aria-label="rostinho sorrindo">:) </i>
     </div>
-    <button mat-flat-button tabindex="0" color="primary" class="btn" routerLink="/client-form">
-      SIMULAR FINANCIAMENTO
+    <button mat-flat-button tabindex="0" class="btn" routerLink="/client-form">
+      Experimente grátis
     </button>
   </div>
 </div>
