--- a/hortalize/src/app/pages/client-form/client-form.component.html
+++ b/hortalize/src/app/pages/client-form/client-form.component.html
@@ -1,5 +1,5 @@
 <div class="body">
-  <h2 tabindex="0">Dados do proponente</h2>
+  <h2 tabindex="0" >Crie uma conta</h2>
   <div class="container">
     <form [formGroup]="clientForm" (ngSubmit)="client()">
       <mat-form-field appearance="outline">
@@ -8,22 +8,6 @@
         <input matInput #input placeholder="Nome Completo" formControlName="name" ngModel pattern="[A-zÀ-ú ]+" />
 
         <mat-error *ngIf="clientForm.get('name')?.invalid"> Preencha com seu nome completo </mat-error>
-      </mat-form-field>
-
-      <mat-form-field appearance="outline">
-        <mat-label>Profissão</mat-label>
-
-        <input matInput #input placeholder="Profissão" formControlName="job" ngModel pattern="[A-zÀ-ú ]+" />
-
-        <mat-error *ngIf="clientForm.get('job')?.invalid"> Preencha com a sua profissão </mat-error>
-      </mat-form-field>
-
-      <mat-form-field appearance="outline">
-        <mat-label>CPF</mat-label>
-
-        <input matInput #input placeholder="CPF" formControlName="cpf" mask="000.000.000-00" />
-
-        <mat-error *ngIf="clientForm.get('cpf')?.invalid"> Preencha com o seu CPF </mat-error>
       </mat-form-field>
 
       <mat-form-field appearance="outline">
@@ -43,20 +27,14 @@
       </mat-form-field>
 
       <mat-form-field appearance="outline">
-        <mat-label>CEP</mat-label>
-
-        <input matInput placeholder="CEP" formControlName="zipCode" mask="00000-000" />
-
-        <mat-error *ngIf="clientForm.get('zipCode')?.invalid"> O CEP deve ter 9 dígitos </mat-error>
-      </mat-form-field>
-
-      <mat-form-field appearance="outline">
         <mat-label>Celular</mat-label>
 
         <input matInput placeholder="Celular" formControlName="celPhone" mask="(00) 00000-0000" />
 
         <mat-error *ngIf="clientForm.get('celPhone')?.invalid"> Preencha com seu celular </mat-error>
       </mat-form-field>
+      
+            
     </form>
 
     <mat-divider></mat-divider>
@@ -65,15 +43,6 @@
       <button mat-stroked-button class="btn-cancelar" color="primary" routerLink="">
         CANCELAR
       </button>
-
-      <!-- <div
-        class="fakebtn"
-        *ngIf="formCliente.invalid"
-        tabindex="0"
-        role="button"
-        aria-disabled="true"
-        aria-label="continuar"
-      ></div> -->
 
       <button mat-flat-button color="primary" class="btn" (click)="navigateImovel()" [disabled]="clientForm.invalid">
         CONTINUAR
