ajustes dos botões

--- a/hortalize/src/app/core/components/toolbar/toolbar.component.css
+++ b/hortalize/src/app/core/components/toolbar/toolbar.component.css
@@ -14,7 +14,11 @@ button {
   margin: auto 5px;
 }
 
-.btn-trocar {
+.btn-sem {
+  color: #578067;
+}
+
+.btn-cor {
   color: #ffffff;
   background-color: #578067 !important;
 }
