--- a/hortalize/src/app/pages/client-form/client-form.component.html
+++ b/hortalize/src/app/pages/client-form/client-form.component.html
@@ -40,11 +40,11 @@
     <mat-divider></mat-divider>
 
     <div class="footer">
-      <button mat-stroked-button class="btn-cancelar" color="primary" routerLink="">
+      <button mat-stroked-button class="btn-cancelar btn-sem" color="primary" routerLink="">
         CANCELAR
       </button>
 
-      <button mat-flat-button color="primary" class="btn" (click)="navigateImovel()" [disabled]="clientForm.invalid">
+      <button mat-flat-button color="primary" class="btn btn-cor" (click)="navigateImovel()" [disabled]="clientForm.invalid">
         CONTINUAR
       </button>
     </div>
