--- a/hortalize/src/app/core/components/toolbar/toolbar.component.html
+++ b/hortalize/src/app/core/components/toolbar/toolbar.component.html
@@ -6,6 +6,6 @@
   <h2 tabindex="0" routerLink="#">Sobre nós</h2>
   <h2 tabindex="0" routerLink="#">Fale conosco</h2>
   <span class="spacer"></span>
-  <button mat-stroked-button>Sair</button>
-  <button mat-flat-button class="btn-trocar">Trocar conta</button>
+  <button mat-stroked-button class="btn-sem">Sair</button>
+  <button mat-flat-button class="btn-cor">Trocar conta</button>
 </mat-toolbar>
