--- a/hortalize/src/app/pages/imovel-form/imovel-form.component.css
+++ b/hortalize/src/app/pages/imovel-form/imovel-form.component.css
@@ -31,3 +31,12 @@ mat-form-field {
   display: flex;
   justify-content: space-between;
 }
+
+.btn-sem {
+  color: #578067;
+}
+
+.btn-cor {
+  color: #ffffff;
+  background-color: #578067;
+}
