--- a/hortalize/src/app/pages/approved/approved.component.css
+++ b/hortalize/src/app/pages/approved/approved.component.css
@@ -8,6 +8,7 @@
 .aprovado {
   font-size: 1.5em;
   font-weight: 500;
+  color:#578067;
 }
 
 .container {
@@ -32,10 +33,10 @@ h3 {
   font-size: 3em;
 }
 
-img {
+/* img {
   margin: 16px auto;
   align-self: center;
-}
+} */
 
 .status {
   color: #a5d76e;
@@ -52,10 +53,40 @@ ul {
   margin-top: 17px;
 }
 
+.container p{
+  color:#578067;
+
+}
+
 button {
   margin: 10px;
   margin-top: 42px;
   border-radius: 4px;
   width: 228px;
   align-self: center;
+  
+}
+
+.btn{
+  background:#578067;
+}
+
+.btn-adiciona{
+  justify-content: end;
+}
+
+.cards{
+  display: flex;
+  flex-direction: row;
+  /* margin-left:100px; */
+  margin:auto;
+  background-color: #578067;
+}
+
+.card1, .card2, .card3{
+  height: 180px;
+  width: 150px;
+  background-color:#ffffff;
+  border-radius:2px;
+  margin:40px;  
 }
