--- a/hortalize/src/app/pages/approved/approved.component.html
+++ b/hortalize/src/app/pages/approved/approved.component.html
@@ -1,4 +1,40 @@
 <div class="body">
+    
+
+  <!-- //chamar nome da horta criada -->
+    <h2 tabindex="0" class="aprovado">Olá Hortinha!</h2>
+    <button mat-flat-button color="primary" class="btn" routerLink="/">
+      Adicionar nova espécie + </button>
+    
+  <div class="container">
+    <div tabindex="0" class="card">
+      <p>Condição: {{weather.condition}} </p>
+      <p>Umidade: {{weather.humidity}}%</p>
+      <p>Temperatura: {{weather.temperature}}º </p>
+      <p>Última atualização: {{weather.date | date:'shortTime'}} </p>
+           
+      <h2 class="status">Espécies recomendadas para a Hortinha:</h2>
+      <div class="cards">
+        <div class="card1">Ver Cultivo ></div>
+        <div class="card2">Ver Cultivo ></div>
+        <div class="card3">Ver Cultivo ></div>
+      </div>
+      
+    
+      
+      <mat-divider></mat-divider>
+      
+    <button mat-flat-button color="primary" class="btn" routerLink="/">
+      IR PARA TELA INICIAL
+    </button>
+  </div>
+</div>
+ 
+
+<!-- <mat-card></mat-card> -->
+
+
+<!-- <div class="body">
   <h2 tabindex="0" class="aprovado">Aprovado</h2>
   <div class="container">
     <div tabindex="0" class="card">
@@ -19,4 +55,4 @@
       IR PARA TELA INICIAL
     </button>
   </div>
-</div>
+</div> -->
