--- a/hortalize/src/app/pages/client-form/client-form.component.html
+++ b/hortalize/src/app/pages/client-form/client-form.component.html
@@ -18,13 +18,22 @@
         <mat-error *ngIf="clientForm.get('email')?.invalid"> Preencha com um email válido </mat-error>
       </mat-form-field>
 
+      <!-- <mat-form-field appearance="outline">
+        <mat-label>Crie uma senha*</mat-label>
+
+        <input matInput type="text" placeholder="Digite sua senha" formControlName="senha"/>
+
+        <mat-error *ngIf="clientForm.get('senha')?.invalid"> Preencha com sua senha corretamente </mat-error>
+      </mat-form-field> -->
+
+
       <mat-form-field appearance="outline">
         <mat-label>Data de nascimento</mat-label>
 
         <input matInput type="text" placeholder="Data de nascimento" formControlName="dateBirth" mask="d0/M0/0000" />
 
         <mat-error *ngIf="clientForm.get('dateBirth')?.invalid"> Preencha com sua data de nascimento </mat-error>
-      </mat-form-field>
+      </mat-form-field> 
 
       <mat-form-field appearance="outline">
         <mat-label>Celular</mat-label>
@@ -32,7 +41,7 @@
         <input matInput placeholder="Celular" formControlName="celPhone" mask="(00) 00000-0000" />
 
         <mat-error *ngIf="clientForm.get('celPhone')?.invalid"> Preencha com seu celular </mat-error>
-      </mat-form-field>
+      </mat-form-field> 
       
             
     </form>
