--- a/hortalize/src/app/pages/approved/approved.component.html
+++ b/hortalize/src/app/pages/approved/approved.component.html
@@ -1,58 +1,47 @@
 <div class="body">
-    
+
 
   <!-- //chamar nome da horta criada -->
-    <h2 tabindex="0" class="aprovado">Olá Hortinha!</h2>
-    <button mat-flat-button color="primary" class="btn" routerLink="/">
-      Adicionar nova espécie + </button>
-    
+  <h2 tabindex="0" class="aprovado">Olá Hortinha!</h2>
+  <button mat-flat-button color="primary" class="btn" routerLink="/">
+    Adicionar nova espécie + </button>
+
   <div class="container">
     <div tabindex="0" class="card">
       <p>Condição: {{weather.condition}} </p>
       <p>Umidade: {{weather.humidity}}%</p>
       <p>Temperatura: {{weather.temperature}}º </p>
       <p>Última atualização: {{weather.date | date:'shortTime'}} </p>
-           
+
       <h2 class="status">Espécies recomendadas para a Hortinha:</h2>
       <div class="cards">
-        <div class="card1">Ver Cultivo ></div>
-        <div class="card2">Ver Cultivo ></div>
-        <div class="card3">Ver Cultivo ></div>
+        <div class="card_planta">
+          <h4>Berinjela</h4>
+          <img sizes="100px" src="../../../assets/berinjela.png" alt="imagem de uma berinjela"><br>
+          <a routerLink="/">Ver Cultivo ></a>
+        </div>
+        <div class="card_planta">
+          <h4>Orégano</h4>
+          <img src="../../../assets/oregano.png" alt="imagem de um vaso de orégano"><br>
+          <a routerLink="/">Ver Cultivo ></a>
+        </div>
+        <div class="card_planta">
+          <h4>Manjericão</h4>
+          <img src="../../../assets/manjericao.png" alt="imagem de um vaso de manjericão"><br>
+          <a routerLink="/">Ver Cultivo ></a>
+        </div>
+
       </div>
-      
-    
-      
+
+
+
       <mat-divider></mat-divider>
-      
-    <button mat-flat-button color="primary" class="btn" routerLink="/">
-      IR PARA TELA INICIAL
-    </button>
-  </div>
-</div>
- 
 
-<!-- <mat-card></mat-card> -->
-
-
-<!-- <div class="body">
-  <h2 tabindex="0" class="aprovado">Aprovado</h2>
-  <div class="container">
-    <div tabindex="0" class="card">
-      <h3>Proposta <b aria-label="número">Nº</b> 00001</h3>
-      <img height="97px" width="103px" src="../../../assets/aprovado.png" alt="" />
-      <h2 class="status">STATUS: APROVADO</h2>
-      <mat-divider></mat-divider>
-      <ul>
-        <li>Taxa de 8<b aria-label="porcento">%</b> ao ano para correntistas</li>
-        <li>Taxa de 10<b aria-label="porcento">%</b> ao ano para não correntistas</li>
-        <li>Parcela inicial: {{ initialInstallment | currency: 'BRL' }}</li>
-        <li>Valor total aprovado: {{ approvedValue | currency: 'BRL' }} </li>
-        <li>Seguro Só Vamu Security.</li>
-        <li>Desconto na primeira e na última parcela</li>
-      </ul>
+      <button mat-flat-button color="primary" class="btn" routerLink="/">
+        IR PARA TELA INICIAL
+      </button>
     </div>
-    <button mat-flat-button color="primary" class="btn" routerLink="/">
-      IR PARA TELA INICIAL
-    </button>
   </div>
-</div> -->
+
+
+  <!-- <mat-card></mat-card> -->
