--- a/hortalize/src/app/pages/inicial/inicial.component.css
+++ b/hortalize/src/app/pages/inicial/inicial.component.css
@@ -2,7 +2,7 @@
   width: auto;
   padding: 16px;
   background-color: #e5e5e5;
-  background-image: url("../../../assets/imagem_grande_home.png");
+  background-image: url("../../../assets/Vector.png");
   background-repeat: no-repeat;
   background-position: bottom right;
   background-size: 20%;
