--- a/hortalize/src/app/core/components/toolbar/toolbar.component.html
+++ b/hortalize/src/app/core/components/toolbar/toolbar.component.html
@@ -3,9 +3,9 @@
     aria-label="Voltar para a Tela inicial" routerLink="/" />
   <span class="spacer"></span>
   <h2 tabindex="0" routerLink="/">Home</h2>
-  <h2 tabindex="0" routerLink="#">Sobre nós</h2>
+  <h2 tabindex="0" routerLink="#">Ranking</h2>
   <h2 tabindex="0" routerLink="#">Fale conosco</h2>
   <span class="spacer"></span>
-  <button mat-stroked-button class="btn-sem">Ver minha horta </button>
+  <button mat-stroked-button class="btn-sem" routerLink="minha-horta">Ver minha horta </button>
   <button mat-flat-button class="btn-cor"  routerLink="client-form">Criar conta</button>
 </mat-toolbar>
