--- a/hortalize/src/app/pages/login/login.component.html
+++ b/hortalize/src/app/pages/login/login.component.html
@@ -1,5 +1,5 @@
 <div class="body">
-    <h2 tabindex="0" >Faça seu Login para verificar suas connexões e seu Ranking</h2>
+    <h2 tabindex="0" >Faça seu Login para verificar suas conexões e seu Ranking</h2>
     <div class="container">
       <form [formGroup]="clientForm">
         <mat-form-field appearance="outline">
