ajustes botoes e imagens

--- a/hortalize/src/app/pages/minha-horta/minha-horta.component.html
+++ b/hortalize/src/app/pages/minha-horta/minha-horta.component.html
@@ -3,9 +3,9 @@
 
   <!-- //chamar nome da horta criada -->
   <h2 tabindex="0" class="aprovado">Olá Hortinha!</h2>
-  <button mat-stroked-button class="btn-sem" routerLink="minha-horta">
+  <button mat-stroked-button class="btn-sem" routerLink="/minha-horta">
     Minha Hortinha</button>
-  <button mat-flat-button color="primary" class="btn" routerLink="conexoes">
+  <button mat-flat-button color="primary" class="btn" routerLink="/conection">
     Conexões</button>
   <button mat-flat-button color="primary" class="btn" routerLink="/">
     Rankings</button>
