--- a/hortalize/src/app/pages/conection/conection.component.html
+++ b/hortalize/src/app/pages/conection/conection.component.html
@@ -1,13 +1,11 @@
 <div class="body">
 
-
-  <!-- //chamar nome da horta criada -->
   <h2 tabindex="0" class="aprovado">Olá Hortinha!</h2>
   <button mat-flat-button color="primary" class="btn" routerLink="/minha-horta">
     Minha Hortinha</button>
-  <button mat-stroked-button class="btn-sem" routerLink="conexoes">
+  <button mat-stroked-button class="btn-sem" routerLink="/conection">
     Conexões</button>
-  <button mat-flat-button color="primary" class="btn" routerLink="/">
+  <button mat-flat-button color="primary" class="btn" routerLink="/ranking">
     Rankings</button>
   <button mat-flat-button color="primary" class="btn" routerLink="/">
     Downloads</button>
@@ -17,11 +15,6 @@
       <h2 class="status">Conexões:</h2>
       <div class="cards">
         <div class="card_conexao">
-          <h4>Mariane</h4>
-          <img sizes="100px" src="../../../assets/Mari.png" alt="foto preta e branca de uma mulher"><br>
-          <a routerLink="/">Ver Rankings ></a>
-        </div>
-        <div class="card_conexao">
           <h4>Monique</h4>
           <img sizes="100px" src="../../../assets/Monique.png" alt="foto preta e branca de uma mulher"><br>
           <a routerLink="/">Ver Rankings ></a>
@@ -29,6 +22,11 @@
         <div class="card_conexao">
           <h4>Daiane</h4>
           <img sizes="100px" src="../../../assets/Dai.png" alt="foto preta e branca de uma mulher"><br>
+          <a routerLink="/">Ver Rankings ></a>
+        </div>
+        <div class="card_conexao">
+          <h4>Mariane</h4>
+          <img sizes="100px" src="../../../assets/Mari.png" alt="foto preta e branca de uma mulher"><br>
           <a routerLink="/">Ver Rankings ></a>
         </div>
 
