--- a/hortalize/src/app/pages/minha-horta/minha-horta.component.html
+++ b/hortalize/src/app/pages/minha-horta/minha-horta.component.html
@@ -7,7 +7,7 @@
     Minha Hortinha</button>
   <button mat-flat-button color="primary" class="btn" routerLink="/conection">
     Conexões</button>
-  <button mat-flat-button color="primary" class="btn" routerLink="/">
+  <button mat-flat-button color="primary" class="btn" routerLink="/ranking">
     Rankings</button>
   <button mat-flat-button color="primary" class="btn" routerLink="/">
     Downloads</button>
