--- a/hortalize/src/app/core/components/toolbar/toolbar.component.html
+++ b/hortalize/src/app/core/components/toolbar/toolbar.component.html
@@ -3,7 +3,7 @@
     aria-label="Voltar para a Tela inicial" routerLink="/" />
   <span class="spacer"></span>
   <h2 tabindex="0" routerLink="/">Home</h2>
-  <h2 tabindex="0" routerLink="#">Ranking</h2>
+  <h2 tabindex="0" routerLink="ranking">Ranking</h2>
   <h2 tabindex="0" routerLink="#">Fale conosco</h2>
   <span class="spacer"></span>
   <button mat-stroked-button class="btn-sem" routerLink="login">Ver minha horta </button>
