--- a/hortalize/src/app/pages/minha-horta/minha-horta.component.html
+++ b/hortalize/src/app/pages/minha-horta/minha-horta.component.html
@@ -9,7 +9,7 @@
     Conexões</button>
   <button mat-flat-button color="primary" class="btn" routerLink="/ranking">
     Rankings</button>
-  <button mat-flat-button color="primary" class="btn" routerLink="/">
+  <button mat-flat-button color="primary" class="btn" routerLink="/download">
     Downloads</button>
 
   <div class="container">
