--- a/hortalize/src/app/pages/ranking/ranking.component.html
+++ b/hortalize/src/app/pages/ranking/ranking.component.html
@@ -7,7 +7,7 @@
     Conexões</button>
   <button mat-stroked-button class="btn-sem" routerLink="/ranking">
     Rankings</button>
-  <button mat-flat-button color="primary" class="btn" routerLink="/">
+  <button mat-flat-button color="primary" class="btn" routerLink="/download">
     Downloads</button>
 
   <div class="container">
