Subir para o heroku

--- a/hortalize/src/app/pages/download/download.component.html
+++ b/hortalize/src/app/pages/download/download.component.html
@@ -2,26 +2,26 @@
 
 
   <!-- //chamar nome da horta criada -->
-  <h2 tabindex="0" class="aprovado">Olá Hortinha!</h2>
+  <h2 tabindex="0" class="aprovado">Olá Lara!</h2>
   <button mat-flat-button color="primary" class="btn" routerLink="/minha-horta">
-    Minha Hortinha</button>
+    Minha Horta</button>
   <button mat-flat-button color="primary" class="btn" routerLink="/conection">
     Conexões</button>
   <button mat-flat-button color="primary" class="btn" routerLink="/ranking">
     Rankings</button>
   <button mat-stroked-button class="btn-sem" routerLink="/download">
-    Downloads</button>
+    Publicações</button>
 
   <div class="container">
     <div tabindex="0" class="card">
       <mat-form-field appearance="fill">
-        <mat-label>Tipo de download</mat-label>
+        <mat-label>Tipo de publicação</mat-label>
         <mat-select>
-          <mat-option value="one">Rega</mat-option>
-          <mat-option value="two">novo plantio</mat-option>
-          <mat-option value="three">nova muda</mat-option>
-          <mat-option value="four">limpeza do local</mat-option>
-          <mat-option value="five">reciclagem</mat-option>
+          <mat-option value="one">Regar - 100</mat-option>
+          <mat-option value="two">Fertilizar - 200</mat-option>
+          <mat-option value="three">Plantar - 500</mat-option>
+          <mat-option value="four">Colher - 50</mat-option>
+          <mat-option value="five">Podar - 100</mat-option>
         </mat-select>
       </mat-form-field>
       <div class="custom-file-upload">
