--- a/hortalize/src/app/pages/minha-horta/minha-horta.component.html
+++ b/hortalize/src/app/pages/minha-horta/minha-horta.component.html
@@ -2,15 +2,15 @@
 
 
   <!-- //chamar nome da horta criada -->
-  <h2 tabindex="0" class="aprovado">Olá Hortinha!</h2>
+  <h2 tabindex="0" class="aprovado">Olá Lara!</h2>
   <button mat-stroked-button class="btn-sem" routerLink="/minha-horta">
-    Minha Hortinha</button>
+    Minha Horta</button>
   <button mat-flat-button color="primary" class="btn" routerLink="/conection">
     Conexões</button>
   <button mat-flat-button color="primary" class="btn" routerLink="/ranking">
     Rankings</button>
   <button mat-flat-button color="primary" class="btn" routerLink="/download">
-    Downloads</button>
+    Publicações</button>
 
   <div class="container">
     <div tabindex="0" class="card">
@@ -19,7 +19,7 @@
       <p>Temperatura: {{weather.temperature}}º </p>
       <p>Última atualização: {{weather.date | date:'shortTime'}} </p>
 
-      <h2 class="status">Espécies recomendadas para a Hortinha:</h2>
+      <h2 class="status">Espécies recomendadas para a Horta:</h2>
       <div class="cards">
         <div class="card_planta">
           <h4>Berinjela</h4>
