--- a/hortalize/src/app/pages/ranking/ranking.component.html
+++ b/hortalize/src/app/pages/ranking/ranking.component.html
@@ -1,14 +1,14 @@
 <div class="body">
 
-  <h2 tabindex="0" class="aprovado">Olá Hortinha!</h2>
+  <h2 tabindex="0" class="aprovado">Olá Lara!</h2>
   <button mat-flat-button color="primary" class="btn" routerLink="/minha-horta">
-    Minha Hortinha</button>
+    Minha Horta</button>
   <button mat-flat-button color="primary" class="btn" routerLink="/conection">
     Conexões</button>
   <button mat-stroked-button class="btn-sem" routerLink="/ranking">
     Rankings</button>
   <button mat-flat-button color="primary" class="btn" routerLink="/download">
-    Downloads</button>
+    Publicações</button>
 
   <div class="container">
     <div tabindex="0" class="card">
